web-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  # annotations:
  #   alb.ingress.kubernetes.io/healthcheck-path: /index.php
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: web-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      nodeSelector:
        role: worker
      containers:
        - name: web
          image: johnson860312/awswebdb
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              # name: web
